upgrade babel, remove vulnerabilities dep, add nvmrc, remove yarn lock

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,10 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/preset-env", {
       "targets": {
         "browsers": ["defaults", "ie >= 10"]
       }
     }],
-    "stage-2",
-    "flow"
+    ["@babel/preset-flow"]
   ]
 }
