--- a/package.json
+++ b/package.json
@@ -49,14 +49,11 @@
     "lodash": "^4.17.10"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-jest": "^23.0.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "documentation": "^7.1.0",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.2.3",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^9.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -66,13 +63,13 @@
     "eslint-plugin-prettier": "^2.6.0",
     "flow-bin": "^0.73.0",
     "flow-copy-source": "^1.3.0",
-    "jest-cli": "^23.1.0",
+    "jest-cli": "^24.8.0",
     "jsdom": "^11.12.0",
     "npm-watch": "^0.6.0",
     "opn-cli": "^3.1.0",
-    "prettier": "^1.11.1",
+    "prettier": "1.18.2",
     "rimraf": "^2.6.2",
-    "standard-changelog": "^2.0.0"
+    "standard-changelog": "^2.0.11"
   },
   "publishConfig": {
     "access": "public"
